# ros2_ws_cpp_pubsub

./: .gitignore
faces_db/: labels.txt
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: image_publisher  image_subscriber  talker
install/cpp_pubsub/share/ament_index/resource_index/package_run_dependencies/: cpp_pubsub
install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
install/cpp_pubsub/share/cpp_pubsub/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/cpp_pubsub/share/cpp_pubsub/cmake/: cpp_pubsubConfig-version.cmake  cpp_pubsubConfig.cmake
install/cpp_pubsub/share/cpp_pubsub/environment/: ament_prefix_path.dsv  path.dsv
install/image_pubsub/share/image_pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/cpp_pubsub/: CMakeLists.txt  package.xml
src/cpp_pubsub/launch/: face_system.launch.py
src/cpp_pubsub/src/: face_recognizer.cpp  minimal_publisher.cpp  minimal_subscriber.cpp
src/gui_node/: CMakeLists.txt  package.xml
src/gui_node/src/: gui_node.cpp
