<?xml version="1.0"?>
<package format="3">
  <name>gui_node</name>
  <version>0.0.1</version>
  <description>Qt GUI ROS2 node for face recognition system</description>

  <maintainer email="you@email.com">thor</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Qt dependency -->
  <exec_depend>qtbase5-dev</exec_depend>

  <!-- 🔴 FOARTE IMPORTANT -->
  <!-- FĂRĂ ASTA, ROS2 NU VEDE PACHETUL -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
